syntax = "proto3";

package frontend.user;

import "api-tools.proto";
import "frontend/common.proto";

option go_package = "/frontend/user";


message RegisterReq {
  string email = 1;
  string password = 2;
}

message RegisterResp {
  int32 user_id = 1;
}

message LoginReq {
  string email = 1;
  string password = 2;
}

message LoginResp {
  int32 user_id = 1;
  string token = 2;
}


message LogoutResp {
  bool success = 1;
}

message VerifyTokenReq {
  string token = 1;
}

message VerifyTokenResp {
  bool valid = 1;
  int32 user_id = 2;
}


service AuthService {
  rpc Register(RegisterReq) returns (RegisterResp) {
    option (api.post) = "/register";
  }  //注册服务/创建用户

  rpc Login(LoginReq) returns (LoginResp) {
    option (api.post) = "/login";
  }

  rpc Logout(common.Empty) returns (LogoutResp) {
    option (api.get) = "/logout";
  }

  // deprecated
  rpc VerifyToken(VerifyTokenReq) returns (VerifyTokenResp) {}
}